--- a/src/layouts/error.html
+++ b/src/layouts/error.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Error occured - /**ERROR_CODE**/</title>
+    <title>Error occurred - /**ERROR_CODE**/</title>
     <style id="theme">
         /**CHALLENGE_CSS**/
     </style>
