Change placeholder naming

--- a/src/layouts/error.html
+++ b/src/layouts/error.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Error occurred - /**ERROR_CODE**/</title>
     <style id="theme">
-        /**CHALLENGE_CSS**/
+        /**ERROR_CSS**/
     </style>
 
     <style id="lds-roller">
@@ -126,7 +126,7 @@
 <body>
     <div class="container flex justify-center">
         <main>
-            /**CHALLENGE_HTML**/
+            /**ERROR_HTML**/
 
             <p>
                 This page will update automatically, if the problem solves itself. <br />
@@ -151,7 +151,7 @@
         </main>
     </div>
     <script>
-        /**CHALLENGE_JS**/
+        /**ERROR_JS**/
     </script>
 </body>
 
